--- a/frontend/directives/fileUpload/fileUpload.styl
+++ b/frontend/directives/fileUpload/fileUpload.styl
@@ -9,12 +9,13 @@
 		border-bottom 4px solid border-color
 		overflow hidden
 		color text-input
+		display block
+		wdith auto
 		margin 25px auto
 		font-size 1.2em
 		padding 0.5em 1em
 		outline none
 		position relative
-		display inline-block
 		i
 			display inline-flex
 			font-size 1.2em
@@ -30,7 +31,7 @@
 			position relative
 			z-index 1
 		.button_background
-			background-color #1e824c
+			background-color #1abc9c
 			width 100%
 			position absolute
 			height 100%
@@ -45,6 +46,8 @@
 		padding 0 30%
 		height 25px
 		margin 37.5px auto
+		// color active-input
+		border none
 		border-radius 0
 			
 	.file-Item
