--- a/frontend/components/tasks/taskCreateEditStyles.styl
+++ b/frontend/components/tasks/taskCreateEditStyles.styl
@@ -1,5 +1,32 @@
 @import "../../../public/libs/css/generalComponentsStyle.styl"
-.task-wrapper
+.createTask-wrapper
+	main-component()
+	min-width 400px
+	.header
+		header-style()
+		@media only screen  and (max-width : 430px), screen and (max-device-width: 430px)
+			text-align right
+		position relative
+		.return-btn
+			cursor pointer
+			display flex
+			align-items center
+			position absolute
+			font-size 20px
+			top 0
+			left 15%
+			i
+				font-size 48px
+				color #337ab7
+			a
+				text-decoration none
+				margin-left 10px
+			@media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+				left 10%
+				a
+					display none
+			@media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+				left 0
 	.main-container
 		.wrapper_lable
 			.backbutton
@@ -23,27 +50,88 @@
 				margin-bottom 20px
 				color shadow-grey
 			.prop_editor
-				.tasktitle
-					text-align center
-					color main-text-color
-					font-size 1.5em
+				&.tasktitle
+					input
+						outline none
+						border none
+						border-radius 4px
+						background-color disable-input
+						border-bottom 4px solid border-color
+						width 80%
+						font-size 25px
+						padding 5px
+						display block
+						color text-input
+						text-align center
+						margin 50px auto 5px
+						&:focus
+							background-color active-input
+						&:focus::-webkit-input-placeholder
+							color transparent
+						&:focus::-moz-placeholder
+							color transparent
+						&:focus:-ms-input-placeholder
+							color transparent
+						&:focus:-moz-placeholder
+							color transparent
+						@media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+							width 90%
+						@media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+							width 100%
+				.taskdescription
 					width 80%
-					padding 5px
+					@media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+						width 90%
+					@media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+						width 100%
+					margin 15px auto 5px
+					position relative
+					text-align left
+					padding 2em
+					font-size 1.3em
+					min-height 150px
+					font-family "Montserrat"
+					background-color disable-input
+					border-radius 12px
+					color text-input
+					border-bottom 4px solid border-color
 					outline none
-					border none
-					border 1px solid border-grey
-					border-radius 7px
+					&.placeholder
+						&:after
+							display block
+					&:focus
+						background-color active-input
+						&:after
+							display none
+
+					&:after
+						content 'Task description'
+						position absolute
+						top 50%
+						left 50%
+						font-size 1.3em
+						pointer-events none
+						display none
+						color gray
+						font-family "Montserrat"
+						opacity 0.7
+						transform translateX(-50%) translateY(-50%)
 				.toDo
-					border 1px solid border-grey
-					padding 5px
-					padding-bottom 20px
+					border-bottom 4px solid border-color
+					background-color disable-input
+					width 80%
+					@media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+						width 90%
+					@media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+						width 100%
 					border-radius 7px
+					margin 0 auto
 					margin-bottom 20px
 					align-items center
-					.toDo_lable
-						text-align left
-						font-size 1.4em
-						color shadow-grey
+					.toDo_number
+						width 10%
+						text-align center
+						font-size 1.2em
 					.deletetodo
 						text-align right
 						font-size 1.4em
@@ -61,62 +149,128 @@
 								margin-left 5px
 								opacity 1
 					.toDo_title
+						width 80%
 						input
-							text-align center
-							color main-text-color
+							text-align left
+							color text-input
 							font-size 1.3em
-							width 80%
-							padding 5px
+							width 100%
+							padding-left 15px
+							background-color disable-input
 							outline none
 							border none
-							border 1px solid border-grey
 							border-radius 7px
-							margin 20px 0
 							
 			.participants
-				font-size 1.2em
-				padding 0 4em
+				width 80%
+				@media only screen  and (max-width : 769px), screen and (max-device-width: 769px)
+					width 90%
+				@media only screen  and (max-width : 550px), screen and (max-device-width: 550px)
+					width 100%
 				display flex
-				justify-content center
+				align-items flex-start
+				align-content flex-start
 				flex-wrap wrap
-				.participant
+				font-size 22px
+				min-height 75px
+				margin 15px auto 25px
+				.btn-group.ng-enter,.btn-group.ng-leave
+					-webkit-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-moz-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-ms-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-o-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					position: relative;
+					display: inline-flex;
+				.btn-group.ng-enter,.btn-group.ng-leave.ng-leave-active
+					opacity 1
+					span
+						text-overflow clip
+						max-width 0px
+					.participant
+						border-bottom 0px solid border-color
+						transform translateY(8px)
+				.btn-group.ng-leave,.btn-group.ng-enter.ng-enter-active
+					opacity 1
+					span
+						text-overflow clip
+						max-width 360px
+					.participant
+						border-bottom 4px solid border-color
+						transform translateY(0)
+				.participant 
 					background-color disable-input
-					color text-input
-					border-radius 4px
+					border none
 					border-bottom 4px solid border-color
-					margin 10px 2px
-					cursor pointer
+					border-radius 4px
+					color text-input
+					max-width 360px
+					padding 7px 18px
+					padding-right 12px
+					text-align center
+					text-decoration none
 					display inline-flex
 					justify-content center
 					align-items center
-					text-decoration none
-					text-align center
-					padding 7px 24px
+					font-size 0.8em
+					margin 10px 7px
+					cursor pointer
+					-webkit-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-moz-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-ms-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					-o-transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					transition: 0.1s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
 					span
-						margin 0 5px
+						display block
+						white-space nowrap
+						overflow hidden
+						text-overflow ellipsis
+						-webkit-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						-moz-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						-ms-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						-o-transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+						transition: 0.2s cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+					i
+						margin-left 10px
+						font-size 1.2em
+					&:hover
+						border-bottom 8px solid border-color
+						transform translateY(-2px)
+						margin 8px 7px
+						i
+							color #e57373
+				.add
+					padding-right 18px
+					padding-left 12px
+					height auto
+					i
+						margin-right 10px
+						color #4DB6AC
+					&:hover
+						i
+							color #4DB6AC
 			.addButton
-				background-color disable-input
-				border none
-				outline none
-				color text-input
-				border-radius 4px
-				border-bottom 4px solid border-color
-				margin 25px auto
-				font-size 1.2em
-				padding 0.5em 1em
-				display flex
-				flex-wrap nowrap
-				justify-content space-between
+				width auto
+				cursor pointer
+				color #78909C
+				font-size 1.4em
+				display inline-block
+				padding 0 24px
+				border-bottom 2px dashed #78909C
+				transition color,border-color 0.2s ease-out
+				&:hover
+					color #0097A7
+					border-color #0097A7
 				i
 					display inline
 					font-size 1.2em
 					margin-right 0.5em
-					span
-						display: -moz-inline-stack;
-						display inline
-						font-family "Montserrat"
-						font-family 1em
-						margin-left 0.5em
+				span
+					display: -moz-inline-stack;
+					display inline
+					font-family "Montserrat"
+					font-family 1em
+					margin-left 0.5em
 		.wrapper_save
 			margin-top 50px
 			button
@@ -140,16 +294,5 @@
 						font-family "Montserrat"
 						font-family 1em
 						margin-left 0.5em	
-		.lastblock
-			&:after
-				content ''
-				height 1px
-				width 80%
-				display block
-				background-image -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0))
-				background-image -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0))
-				background-image -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0))
-				background-image -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0))
-		
 				
 					
