--- a/frontend/components/tasks/tasksTemplate.pug
+++ b/frontend/components/tasks/tasksTemplate.pug
@@ -12,7 +12,7 @@
 				li(ng-click = "tasksctrl.isHiddenKw = !tasksctrl.isHiddenKw") keyword =
 				input(ng-hide = "tasksctrl.isHiddenKw" type="text" ng-model = "tasksctrl.keyword")
 				li.resetfilter(ng-click = "tasksctrl.changeFilter('none')") reset filters
-		.wrapper_task.row.center-xs(ng-repeat = "task in filtredTasks = (tasksctrl.tasks | filter: tasksctrl.keyword | filter: tasksctrl.filterKey) track by $index", ng-if = "tasksctrl.contentFlag" ,   id="{{task._id}}")
+		.wrapper_task.row.center-xs(ng-repeat = "task in filtredTasks = (tasksctrl.tasks | filter: tasksctrl.keyword | filter: tasksctrl.filterKey) track by $index", ng-if = "tasksctrl.contentFlag" ,   id="{{task._id}}", ng-class="{'expanded': task.expanded}")
 			.col-xs-12.task_header.row.middle-xs.center-xs
 				.task_progress.col-xs-2.col-sm-4
 					.Progress_content(ng-if = "task.toDos.length") 
@@ -26,7 +26,7 @@
 					i.fa(aria-hidden = "true", ng-click = "tasksctrl.expand(task)",ng-class="{'fa-arrow-down': !task.expanded, 'fa-arrow-up': task.expanded}")
 			.task_todos.col-xs-12.animate-expand(ng-if="task.expanded")
 				.row.start-xs.information_block
-					.task_itemLable.col-xs-offset-1.col-xs-11(ng-if = "task.description") Task description:
+					//- .task_itemLable.col-xs-offset-1.col-xs-11(ng-if = "task.description") Task description:
 					.task_description.col-xs-offset-1.col-xs-10(ng-if = "task.description" ng-bind-html="task.description")
 					.task_itemLable.col-xs-offset-1.col-xs-10 Participants:
 						span
@@ -41,11 +41,10 @@
 					.toDo_title.col-xs-8 {{todo.title}}
 					.toDo_description.col-xs-offset-1.col-xs-10(ng-bind-html="todo.description")
 				.sub_functions.row.center-xs
-					.col-xs-4.start-xs.date {{task.dateCreated | date: "MMM d, y h:mm"}} ({{task.author.firstName}} {{task.author.lastName}})
-					.col-xs-8.end-xs.icon_bar 
+					.col-xs-12.col-sm-6.start-sm.end-xs.date {{task.dateCreated | date: "MMM d, y h:mm"}} ({{task.author.firstName}} {{task.author.lastName}})
+					.col-xs-12.col-sm-6.end-xs.icon_bar 
 						i.fa.fa-comments-o(aria-hidden = "true",ng-link='["TaskComments",{id:task._id}]')
 						file-wrapper(files = 'task.files', source-id = 'task._id')
-						p {{window._injectedData.userId}}
 						i.fa.fa-pencil(aria-hidden = "true", ng-link = "['TaskUpdate', {id: task._id}]",ng-if="tasksctrl.isAuthor(task) || tasksctrl.isAdmin")
 						i.fa.fa-times(aria-hidden = "true", ng-click = "tasksctrl.deleteTask(task._id,$index)",ng-if="tasksctrl.isAuthor(task) || tasksctrl.isAdmin")
 		.wrapper_noTask.row.center-xs(ng-if = "!tasksctrl.tasks.length")
