--- a/frontend/components/checkins/checkinsAnswer-pug.component.pug
+++ b/frontend/components/checkins/checkinsAnswer-pug.component.pug
@@ -1,16 +1,21 @@
 ﻿.checkins-setup-wrapper
-    .checkins-setup
-        .header-setup
-            .close-btn
-                a(ng-click="checkinsAnswer.redirect()")
-                    i.fa.fa-times.fa-2x
-        p question: {{checkinsAnswer.question}}
-        input(ckeditor,type="text",name="text" , cols='30', rows='10',ng-model="checkinsAnswer.body",
+    .checkins-setup.row
+        .col-xs-12
+            h2.header-setup.row.center-xs Answer check-in
+            br
+            .checkins-holder.row.center-xs
+                .col-xs-2.question-title Question:
+                .col-xs-4.start-xs.question {{checkinsAnswer.question}}
+            br
+            .row.center-xs
+                input.col-xs-5(ckeditor,type="text",name="text" , cols='30', rows='10',ng-model="checkinsAnswer.body",
         required,ng-minlength="10" ng-maxlength="300")
-        hr
-        p(ng-show="message.text.$invalid" class="help-block") Description is required.
-        p(ng-show="message.text.$error.minlength" class="help-block") Description is too short.
-        p(ng-show="message.text.$error.maxlength" class="help-block") Description is too long.
-        .buttons
-          div.sendBtn
-            button(ng-click="checkinsAnswer.post()") Post
+            .row.center-xs
+                p.col-xs-5(ng-show="message.text.$invalid" class="help-block") Description is required.
+            .row.center-xs
+                p.col-xs-5(ng-show="message.text.$error.minlength" class="help-block") Description is too short.
+            .row
+                p.col-xs-5(ng-show="message.text.$error.maxlength" class="help-block") Description is too long.
+            .buttons.row.center-xs
+                .col-xs-2.button.ok-btn(ng-click="checkinsAnswer.post()") Answer
+                .col-xs-1.col-xs-offset-1.button.back-btn(ng-click="checkinsAnswer.redirect()") Back
