--- a/frontend/components/answerCheckin/answer.styl
+++ b/frontend/components/answerCheckin/answer.styl
@@ -27,6 +27,7 @@
                 text-align: left
                 display: inline-block
                 width: 100%
+                word-break: break-all
             .answer-item
                 border-bottom: 1px solid border-grey
                 display flex
