change checkin colors

--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -27,8 +27,8 @@
                 font-family "Montserrat"
                 font-size 24px
                 padding 15px 40px
-                --box-shadow-color #004D40
-                background-color #2e8f35
+                --box-shadow-color #1e4179
+                background-color #1d8dbf
         li
             list-style none
 
@@ -49,7 +49,7 @@
             & > label
                 line-height 2em
                 height 2em
-                background-color #3e8846
+                background-color #24255e
                 font-size 23px
                 font-weight bold
                 color #f9f9f9
@@ -82,8 +82,8 @@
         input[id="friday"]:checked ~ * label[for="friday"],
         input[id="saturday"]:checked ~ * label[for="saturday"],
         input[id="sunday"]:checked ~ * label[for="sunday"] {
-            background-color: #4aca51;
-            border-top: 4px solid #35a720;
+            background-color: #305c70;
+            border-top: 4px solid #253c4d;
         }
 
         @media (min-width: 600px) {
@@ -117,8 +117,8 @@
                 color: #ffffff;
                 margin-left: 5px;
                 margin-bottom: 5px;
-                background-color: #3e8846;
-                border: 1px solid #35a720;
+                background-color: #8eaed1;
+                border: 1px solid #3c718a;
                 border-radius: 10px;
                 float: left;
                 cursor: pointer;
