--- a/frontend/directives/filesWrapper/filesWrapper.style.styl
+++ b/frontend/directives/filesWrapper/filesWrapper.style.styl
@@ -63,7 +63,10 @@
                             margin-left 10px
                             opacity 1
         .filesWrapper-downloadAll
-            .dAll
+            .downloadAll
                 button()
                 color white
+                --box-shadow-color #004D40
+                background-color #1E824C
                 text-decoration none
+                padding 15px 35px
