--- a/frontend/components/messageBoard/messageBoard.pug
+++ b/frontend/components/messageBoard/messageBoard.pug
@@ -25,3 +25,4 @@
 				.use-button
 						//- i.fa.fa-files-o(ng-link='["File"]')
 						i.fa.fa-comments-o(ng-link='["Message comments",{id:message._id}]')
+						file-wrapper(files = 'message.files')
