--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -91,6 +91,8 @@
                 &:hover
                     text-decoration none
                     cursor pointer
+            p
+                word-break: break-all
             .main
                 p
                     display inline
