--- a/frontend/components/events/eventList.component.pug
+++ b/frontend/components/events/eventList.component.pug
@@ -44,7 +44,7 @@
                         span.participLable Participants: 
                         span.avatar(ng-repeat="participant in vm.userEvents[$index].participants track by $index") {{ participant.firstName[0] + participant.lastName[0]}}
                     .toolbar
-                        i.fa.fa-paperclip
+                        file-wrapper(files = 'event.files')
                         i.fa.fa-comments-o(ng-link='["Event comments", {id:event._id}]')
                 
                 
