--- a/frontend/directives/commentsModal/commentsModal.style.styl
+++ b/frontend/directives/commentsModal/commentsModal.style.styl
@@ -40,9 +40,9 @@
                     font-size 1.4em
         .commentsModal-content
             overflow-y auto
-            max-height 50vh
+            max-height 70vh
             @media only screen and (max-width : 1000px)
-                max-height 60vh
+                max-height 80vh
             margin 10px
             padding 10px
             .comments_item
@@ -72,6 +72,33 @@
                         width 100%
                         color text-input
                         font-size 0.8em
+            .postComment
+                padding 10px
+                width 100%
+                .postMessage
+                    textarea
+                        resize none
+                        background-color disable-input
+                        color text-input
+                        width 100%
+                        outline none
+                        border none
+                        padding 10px
+                        font-size 0.7em
+                        border-radius 5px
+                        border-bottom 4px solid border-color
+                .postButton
+                    display flex
+                    justify-content center
+                    button
+                        
+                        button()
+                        color white
+                        --box-shadow-color #004D40
+                        background-color #1E824C
+                        text-decoration none
+                        border-radius 4px
+                        padding 5px 15px
         .commentsModal-downloadAll
             .dAll
                 button()
