--- a/frontend/directives/filesWrapper/filesWrapper.style.styl
+++ b/frontend/directives/filesWrapper/filesWrapper.style.styl
@@ -37,7 +37,7 @@
                 display flex
                 align-items center
                 i
-                    font-size 1.4em
+                    font-size 30px
         .filesWrapper-content
             overflow-y auto
             max-height 30vh
@@ -49,7 +49,7 @@
             .file_item
                 white-space nowrap
                 a
-                    font-size 0.7em
+                    font-size 16px
                     cursor pointer
                     text-decoration none
                     transition all 0.5s ease-out
