Add instance title to comment Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/directives/commentsModal/commentsModal.style.styl
+++ b/frontend/directives/commentsModal/commentsModal.style.styl
@@ -38,6 +38,12 @@
                 align-items center
                 i
                     font-size 1.4em
+            .commentsInfo
+                text-align left
+                color text-input
+                opacity 0.7
+                margin 15px 0 5px
+                padding 5px 10px 5px 40px
         .commentsModal-content
             overflow-y auto
             max-height 70vh
